[package]
name = "google-drive-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json", "blocking", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread", "macros"] }
